--- a/StoreTeck/templates/category/category_update.html
+++ b/StoreTeck/templates/category/category_update.html
@@ -1,11 +1,11 @@
-<!-- profile.html -->
+<!-- category_update.html -->
 
 {% extends 'base.html' %}
 {% block content %}
-  <h2>User Profile</h2>
+  <h2>Edit Category</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Update Profile</button>
+    <button type="submit">Update Category</button>
   </form>
 {% endblock %}
