--- a/StoreTeck/templates/registrations/login.html
+++ b/StoreTeck/templates/registrations/login.html
@@ -1,11 +1,11 @@
-<!-- profile.html -->
+<!-- registration/login.html -->
 
 {% extends 'base.html' %}
 {% block content %}
-  <h2>User Profile</h2>
+  <h2>Login</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Update Profile</button>
+    <button type="submit">Login</button>
   </form>
 {% endblock %}
