--- a/StoreTeck/templates/registrations/register.html
+++ b/StoreTeck/templates/registrations/register.html
@@ -1,11 +1,11 @@
-<!-- profile.html -->
+<!-- registration/register.html -->
 
 {% extends 'base.html' %}
 {% block content %}
-  <h2>User Profile</h2>
+  <h2>Register</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Update Profile</button>
+    <button type="submit">Register</button>
   </form>
 {% endblock %}
